added harp.json, changed directory to framework style, played with Jade

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,6 +1,8 @@
-doctype
+!!! 5
 html
   head
     link(rel="stylesheet", href="/main.css")
   body
-    != yield
+      != yield
+    footer
+      p Made by ndrw.me
