--- a/public/index.jade
+++ b/public/index.jade
@@ -1,7 +1,8 @@
 h1 ndrw.me
-h3 This is yours to own. Enjoy.
-p The more you know, the more you know, and the more you don't know.
-ul
-	li: a(href="/thoughts/") Thoughts
-	li reason 2
-	li reason 3
+h3 The more you know, the more you know, and the more you don't know.
+p Hi, I'm Andrew! I design things...
+nav
+  ul
+    li: a(href="/thoughts/") Advice & Thoughts
+    li: a(href="/weeResume/") Resume
+    li reason 3
