--- a/public/main.less
+++ b/public/main.less
@@ -1,8 +1,8 @@
 body{
-  font-family: "Helvetica";
+  font-family: 'Lato';
   text-align: center;
   padding: 50px 20px 0;
-  background: #f4f4f7;
+  background: #fff;
   color: #444;
   margin: 0;
 }
@@ -10,7 +10,7 @@ body{
 h1{
   font-size: 65px;
   line-height: 1.2em;
-  border-bottom: #CCC solid 1px;
+  border-bottom: 1px solid #E6E6E6;
   padding: 20px 0;
 }
 
@@ -19,5 +19,18 @@ h3{
 }
 
 p{
-  
+  font-weight: 300;
+}
+
+
+nav a {
+  text-decoration: none;
+  color: red;
+}
+
+
+
+footer{
+  margin-top: 30px;
+  font-size: 0.8rem;
 }
