--- a/public/index.jade
+++ b/public/index.jade
@@ -1,8 +1,12 @@
-h1 ndrw.me
+h1 Hello.
 h3 The more you know, the more you know, and the more you don't know.
-p Hi, I'm Andrew! I design things...
-nav
+p Hi, I'm Andrew! I design things.
+nav.unit.one-of-four
   ul
+    li: a(href="/about.html") About
     li: a(href="/thoughts/") Advice & Thoughts
     li: a(href="/weeResume/") Resume
-    li reason 3
+    li: a(href="/a/web-development-notes.html") Web dev notes
+    li thing 4
+div.unit.three-of-four
+  p not much here yet
