--- a/public/main.less
+++ b/public/main.less
@@ -1,36 +1,55 @@
+/*--------------
+  Main content
+----------------*/
+
 body{
-  font-family: 'Lato';
-  text-align: center;
+  font-family: 'Lato', Helvetica, sans-serif;
   padding: 50px 20px 0;
-  background: #fff;
+  background-color: #fff;
+  //background: linear-gradient(45deg, #0a1855 0%, #da0024 100%) fixed;
   color: #444;
   margin: 0;
+  height: 100%;
 }
 
 h1{
   font-size: 65px;
   line-height: 1.2em;
-  border-bottom: 1px solid #E6E6E6;
+  border-bottom: 1px dashed #E6E6E6;
   padding: 20px 0;
+  text-align: center;
 }
 
 h3{
   font-weight: 300;
+  text-align: center;
 }
 
 p{
   font-weight: 300;
+  text-align: center;
 }
 
 
 nav a {
   text-decoration: none;
-  color: red;
+  color: blue;
+}
+
+.mainlink a{
+  text-decoration: none;
+  font-size: 1.4rem;
+  padding: 5px 20px 9px 20px;
+  border: 2px solid;  
 }
 
 
+/*--------------
+  Footer
+----------------*/
 
 footer{
   margin-top: 30px;
   font-size: 0.8rem;
+  text-align: center;
 }
