added email collector partial, project grid and images, lots of small refinements, content additions

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -11,6 +11,6 @@ html
         p.mainlink <a href="/">ndrw.me</a>
         != yield
       footer
-        p Made by <a href="http://ndrw.me">ndrw.me</a>
+        p Handcrafted by <a href="/">ndrw.me</a>
 
     
