--- a/public/about.jade
+++ b/public/about.jade
@@ -1,4 +1,4 @@
-h1 About me
+h1 About
 h3 The more you know, the more you know, and the more you don't know.
 p.
   Lorem ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum
