--- a/public/index.jade
+++ b/public/index.jade
@@ -1,12 +1,53 @@
+div#thebar
+  != partial("_emailcollector")
+
 h1 Hello.
 h3 The more you know, the more you know, and the more you don't know.
 p Hi, I'm Andrew! I design things.
 nav.unit.one-of-four
   ul
     li: a(href="/about.html") About
-    li: a(href="/thoughts/") Advice & Thoughts
     li: a(href="/weeResume/") Resume
     li: a(href="/a/web-development-notes.html") Web dev notes
+    li: a(href="/thoughts/") Advice & Thoughts
+    li: a(href="#") Shop
     li thing 4
-div.unit.three-of-four
+nav.unit.one-of-four
+  ul
+    li: a(href="#") StartupCities
+    li: a(href="#") Recommendations
+    li: a(href="#") One-line book reviews
+    li: a(href="#") How to be a UX designer
+    li thing 4
+    li thing 4
+    li thing 4
+nav.unit.one-of-four
+  ul
+    li: a(href="#") ndrw design lab
+    li: a(href="#") obnyc
+nav.unit.one-of-four
   p not much here yet
+
+section.project-grid
+  div.unit.one-of-three
+    img(src="/img/gnv.png")
+  div.unit.one-of-three
+    img(src="/img/hejia.png")
+  div.unit.one-of-three
+    img(src="/img/nnb.png")
+
+  div.unit.one-of-three
+    img(src="/img/gnv.png")
+  div.unit.one-of-three
+    img(src="/img/hejia.png")
+  div.unit.one-of-three
+    img(src="/img/nnb.png")
+
+  div.unit.one-of-three
+    img(src="/img/gnv.png")
+  div.unit.one-of-three
+    img(src="/img/hejia.png")
+  div.unit.one-of-three
+    img(src="/img/nnb.png")
+
+  
