--- a/public/main.less
+++ b/public/main.less
@@ -5,35 +5,10 @@
 body{
   font-family: 'Lato', Helvetica, sans-serif;
   padding: 50px 20px 0;
+  margin: 0;
   background-color: #fff;
   //background: linear-gradient(45deg, #0a1855 0%, #da0024 100%) fixed;
   color: #444;
-  margin: 0;
-  height: 100%;
-}
-
-h1{
-  font-size: 65px;
-  line-height: 1.2em;
-  border-bottom: 1px dashed #E6E6E6;
-  padding: 20px 0;
-  text-align: center;
-}
-
-h3{
-  font-weight: 300;
-  text-align: center;
-}
-
-p{
-  font-weight: 300;
-  text-align: center;
-}
-
-
-nav a {
-  text-decoration: none;
-  color: blue;
 }
 
 .mainlink a{
@@ -43,13 +18,118 @@ nav a {
   border: 2px solid;  
 }
 
+h1{
+  font-size: 65px;
+  line-height: 1.2em;
+  border-bottom: 1px dashed #E6E6E6;
+  padding: 20px 0;
+}
+
+h3{
+  font-weight: 300;
+  padding: 15px 0;
+}
+
+p{
+  font-weight: 300;
+}
+
+
+/*--------------
+  Index lists
+----------------*/
+
+nav a {
+  text-decoration: none;
+  color: blue;
+}
+nav ul li {
+  padding-bottom: 10px;
+}
+
+
+/*--------------
+  Projects Grid
+----------------*/
+
+.project-grid {
+  margin-top: 150px;
+}
+
+.one-of-three {
+  margin-bottom: 40px;
+}
+
+.one-of-three img {
+  max-width: 210px;
+} 
+
+
+/*--------------
+  The Email Bar
+----------------*/
+
+#thebar {
+  border-bottom: 2px solid red;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+}
+#thebar form div {
+  display: inline;
+}
+
+#thebar label {
+  margin-right: 5px;
+}
+
+#thebar input[type=text] {
+  border: 0;
+  
+  border-bottom: 1px dashed #ccc;
+
+  /*border: 1px solid red;
+  border-radius: 10px;*/
+
+  /*border-left: 2px solid red;
+  border-right: 2px solid red;*/
+
+  padding: 0 10px;
+
+  width: 250px;
+
+
+  margin-right: 5px;
+}
+
+#thebar .submit {
+  background-color: white;
+  color: red;
+
+  padding: 3px;
+  border: 0;
+  border-radius: 0;
+
+  border: 2px solid red;
+
+  text-transform: lowercase;
+
+}
+#thebar .submit:hover {
+  color: black;
+  border-color: black;
+}
+
+
 
 /*--------------
   Footer
 ----------------*/
 
 footer{
-  margin-top: 30px;
+  margin: 30px 0;
   font-size: 0.8rem;
   text-align: center;
 }
