small content edits, split about into a partial, changed project grid into a block layout

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -11,6 +11,6 @@ html
         p.mainlink <a href="/">ndrw.me</a>
         != yield
       footer
-        p Handcrafted by <a href="/">ndrw.me</a>
+        p Made by <a href="/">ndrw.me</a>
 
     
