--- a/public/about.jade
+++ b/public/about.jade
@@ -1,4 +1,15 @@
 h1 About
-h3 The more you know, the more you know, and the more you don't know.
-p.
-  Lorem ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum
+
+article!= partial("about-text")
+
+
+div.connect
+  p: a(href="https://twitter.com/_ndrw") Twitter
+  p: a(href="http://linkedin.com/in/andrewnonumbers") LinkedIn
+  p: a(href="http://instagram.com/andrewnonumbers") Instagram
+  p: a(href="http://www.flickr.com/photos/andrewnonumbers/sets") Flickr
+  p: a(href="mailto:andrewnonumbers+site@gmail.com") Email Me
+  p: a(href="#") Call Me
+
+
+  
