--- a/public/index.jade
+++ b/public/index.jade
@@ -10,11 +10,16 @@ nav.unit.one-of-four
     li: a(href="/weeResume/") Resume
     li: a(href="/a/web-development-notes.html") Web dev notes
     li: a(href="/thoughts/") Advice & Thoughts
+    li: a(href="#") 10 Rules to Life
     li: a(href="#") Shop
+    li: a(href="#") The Scrap Pile
+    li: a(href="#") What to read
     li thing 4
 nav.unit.one-of-four
   ul
     li: a(href="#") StartupCities
+    li: a(href="http://advicefromacollegedropout.com") Podcast
+    li: a(href="#") How I work
     li: a(href="#") Recommendations
     li: a(href="#") One-line book reviews
     li: a(href="#") How to be a UX designer
@@ -25,29 +30,72 @@ nav.unit.one-of-four
   ul
     li: a(href="#") ndrw design lab
     li: a(href="#") obnyc
+    li: a(href="#") Sponsor
 nav.unit.one-of-four
   p not much here yet
 
-section.project-grid
-  div.unit.one-of-three
-    img(src="/img/gnv.png")
-  div.unit.one-of-three
-    img(src="/img/hejia.png")
-  div.unit.one-of-three
-    img(src="/img/nnb.png")
+  ul
+    li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
+    li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
 
-  div.unit.one-of-three
-    img(src="/img/gnv.png")
-  div.unit.one-of-three
-    img(src="/img/hejia.png")
-  div.unit.one-of-three
-    img(src="/img/nnb.png")
 
-  div.unit.one-of-three
-    img(src="/img/gnv.png")
-  div.unit.one-of-three
-    img(src="/img/hejia.png")
-  div.unit.one-of-three
-    img(src="/img/nnb.png")
+section.a-project.a
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Project Title
+    p.
+      I did this and this this this ipsum this ipsum is a thing really
+      this ipsum is a thing really this ipsum is a thing really
+    h4 How it works
+    p.
+      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
+      lol ipsum heck yeah lol ipsum heck yeah
+    h4 My role
+    p Role 1, Role 2
 
+section.a-project.b
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Project Title
+    p.
+      I did this and this this this ipsum this ipsum is a thing really
+      this ipsum is a thing really this ipsum is a thing really
+    h4 How it works
+    p.
+      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
+      lol ipsum heck yeah lol ipsum heck yeah
+    h4 My role
+    p Role 1, Role 2
+
+section.a-project.c
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Project Title
+    p.
+      I did this and this this this ipsum this ipsum is a thing really
+      this ipsum is a thing really this ipsum is a thing really
+    h4 How it works
+    p.
+      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
+      lol ipsum heck yeah lol ipsum heck yeah
+    h4 My role
+    p Role 1, Role 2
+
+section.a-project.d
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Project Title
+    p.
+      I did this and this this this ipsum this ipsum is a thing really
+      this ipsum is a thing really this ipsum is a thing really
+    h4 How it works
+    p.
+      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
+      lol ipsum heck yeah lol ipsum heck yeah
+    h4 My role
+    p Role 1, Role 2
   
