--- a/public/index.jade
+++ b/public/index.jade
@@ -8,24 +8,22 @@ nav.unit.one-of-four
   ul
     li: a(href="/about.html") About
     li: a(href="/weeResume/") Resume
-    li: a(href="/a/web-development-notes.html") Web dev notes
     li: a(href="/thoughts/") Advice & Thoughts
+nav.unit.one-of-four
+  ul
+    li: a(href="/a/web-development-notes.html") Web dev notes
     li: a(href="#") 10 Rules to Life
+    li: a(href="http://designtox.tumblr.com") designtox
+    li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
     li: a(href="#") Shop
     li: a(href="#") The Scrap Pile
     li: a(href="#") What to read
-    li thing 4
-nav.unit.one-of-four
-  ul
     li: a(href="#") StartupCities
     li: a(href="http://advicefromacollegedropout.com") Podcast
     li: a(href="#") How I work
     li: a(href="#") Recommendations
     li: a(href="#") One-line book reviews
     li: a(href="#") How to be a UX designer
-    li thing 4
-    li thing 4
-    li thing 4
 nav.unit.one-of-four
   ul
     li: a(href="#") ndrw design lab
@@ -33,69 +31,114 @@ nav.unit.one-of-four
     li: a(href="#") Sponsor
 nav.unit.one-of-four
   p not much here yet
-
   ul
     li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
     li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
 
 
-section.a-project.a
-  div.unit.three-of-four
-    img(src="/img/x.png")
-  div.unit.one-of-four
-    h3 Project Title
-    p.
-      I did this and this this this ipsum this ipsum is a thing really
-      this ipsum is a thing really this ipsum is a thing really
-    h4 How it works
-    p.
-      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
-      lol ipsum heck yeah lol ipsum heck yeah
-    h4 My role
-    p Role 1, Role 2
-
-section.a-project.b
-  div.unit.three-of-four
-    img(src="/img/x.png")
-  div.unit.one-of-four
-    h3 Project Title
-    p.
-      I did this and this this this ipsum this ipsum is a thing really
-      this ipsum is a thing really this ipsum is a thing really
-    h4 How it works
-    p.
-      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
-      lol ipsum heck yeah lol ipsum heck yeah
-    h4 My role
-    p Role 1, Role 2
-
-section.a-project.c
-  div.unit.three-of-four
-    img(src="/img/x.png")
-  div.unit.one-of-four
-    h3 Project Title
-    p.
-      I did this and this this this ipsum this ipsum is a thing really
-      this ipsum is a thing really this ipsum is a thing really
-    h4 How it works
-    p.
-      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
-      lol ipsum heck yeah lol ipsum heck yeah
-    h4 My role
-    p Role 1, Role 2
 
 section.a-project.d
   div.unit.three-of-four
     img(src="/img/x.png")
   div.unit.one-of-four
-    h3 Project Title
+    h3 Designership
     p.
-      I did this and this this this ipsum this ipsum is a thing really
-      this ipsum is a thing really this ipsum is a thing really
+      Lorem ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum.
+    h4 How it works
+    p.
+       lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsumined with smartphone GPS data, can mapped with the Google Maps API.
+    h4 My role
+    p Role1, Role2
+
+section.a-project.a
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 routeFun
+    p.
+      Volkswagen gave us a huge set of data and allowed us to build what we wanted at a hackathon sponsored by Volkswagen AG, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that approximates the funness of roads for driving enthusiasts. We presented to the Head of Marketing at VW Group.
+    h4 How it works
+    p.
+      The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can mapped with the Google Maps API.
+    h4 My role
+    p Prototyping, UI, front-end code
+
+section.a-project.d
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 SwapBot
+    p.
+      I created the user flow and design for the web app and coded the website. We won $500 and 3rd place at the Lincoln Labs hackathon.
+    h4 How it works
+    p.
+      SwapBot is meant to increase clothing donations by creating a better experience for both donors and recepients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
+    h4 My role
+    p UX, UI, front-end code
+
+section.a-project.c
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 tosigram
+    p.
+      I created the user flow and design for the web app and coded the website. We won $500 and 3rd place at the Lincoln Labs hackathon.
+    h4 How it works
+    p.
+      SwapBot is meant to increase clothing donations by creating a better experience for both donors and recepients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
+    h4 My role
+    p UX, UI, front-end code   
+
+section.a-project.b
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Hejia ERP
+    p.
+      I helped lead a complete redesign of Hejia's mobile ERP client, working with a small team of iOS and Android developers to implement on both platforms. It is live in the Chinese market.
+    h4 How it works
+    p.
+      One of the leading ERP providers for businesses in China, Hejia needed a 
+    h4 My role
+    p UX, UI
+
+section.a-project.c
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 Gainesville Tech
+    p.
+      I did this as my first logo and identity project for the upcoming site covering the startup and technology community in Gainesville.
     h4 How it works
     p.
       More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
       lol ipsum heck yeah lol ipsum heck yeah
     h4 My role
-    p Role 1, Role 2
+    p Visual design
+
+section.a-project.d
+  div.unit.three-of-four
+    img(src="/img/x.png")
+  div.unit.one-of-four
+    h3 ArmAlarm
+    p.
+      My first hardware project, I helped with planning the user experience and ergonomics as well as some basic soldering. This project won 1st place at Science Hack Day (SHD) Chicago.
+    h4 How it works
+    p.
+      An wrist-worn alarm clock that reads the wearer's pulse using IR and turns off only when the user raises his or her heartrate by getting out of bed and doing physical activity.
+    h4 My role
+    p UX
   
+section.a-project.c
+  div.unit.three-of-four
+    <iframe width="635" height="518" src="//www.youtube.com/embed/56HjNUwjL5Y?rel=0" frameborder="0" allowfullscreen></iframe>
+  div.unit.one-of-four
+    h3 CMU iOS app
+    p.
+      More ipsum lol ipsum heck yeah lol
+    h4 How it works
+    p.
+      More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
+      lol ipsum heck yeah lol ipsum heck yeah
+    h4 My role
+    p 
