--- a/public/main.less
+++ b/public/main.less
@@ -9,6 +9,7 @@ body{
   background-color: #fff;
   //background: linear-gradient(45deg, #0a1855 0%, #da0024 100%) fixed;
   color: #444;
+  margin-top: 20px;
 }
 
 .mainlink a{
@@ -56,7 +57,7 @@ nav ul li {
 .a-project {
   margin-top: 150px;
   font-size: 0.9rem;
-  padding: 50px 0;
+  padding: 40px 20px;
 }
 
 .a {
@@ -89,13 +90,15 @@ nav ul li {
   text-align: center;
 
   position: absolute;
-  top: 4px;
+  top: 0;
 
   //centers the bar
   left: 0; right: 0;
   margin: auto; 
-  
 
+  padding: 4px 0;
+  
+  background: #eee;
 }
 #thebar form div {
   display: inline;
@@ -120,8 +123,7 @@ nav ul li {
 
   padding: 0 10px;
 
-  width: 250px;
-
+  width: 210px;
 
   margin-right: 5px;
 }
@@ -162,7 +164,7 @@ nav ul li {
 ----------------*/
 
 footer{
-  margin: 30px 0;
+  margin: 70px 0;
   font-size: 0.8rem;
   text-align: center;
 }
