--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -5,15 +5,15 @@ html
     link(rel="stylesheet", href="/firstToastGrid.css")
     //CSS reset + grid
     link(rel="stylesheet", href="/main.css")
+
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
     div.container
-      div#thebar
-        != partial("_emailcollector")
       div.grid
         p.mainlink <a href="/">ndrw.me</a>
         != yield
       footer
         p Made by <a href="/">ndrw.me</a>
-        p Built on Harpjs, HTML5, and LESS
+        p Built with Harp.js, HTML5, and LESS
 
     
