cleaned up directory, ready to add submodule weeResume

--- a/public/index.jade
+++ b/public/index.jade
@@ -9,20 +9,19 @@ nav.unit.one-of-four
     li: a(href="/about.html") About
     li: a(href="/weeResume/") Resume
     li: a(href="/thoughts/") Advice & Thoughts
-nav.unit.one-of-four
-  ul
-    li: a(href="/a/web-development-notes.html") Web dev notes
-    li: a(href="#") 10 Rules to Life
     li: a(href="http://designtox.tumblr.com") designtox
     li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
-    li: a(href="#") Shop
-    li: a(href="#") The Scrap Pile
-    li: a(href="#") What to read
-    li: a(href="#") StartupCities
     li: a(href="http://advicefromacollegedropout.com") Podcast
+    li: a(href="#") Shop
+nav.unit.one-of-four
+  ul
+    li: a(href="/a/one-line-book-reviews.html") One-line book reviews
+    li: a(href="/a/content-consumption.html") Content consumption
+    li: a(href="#") StartupCities
+    li: a(href="/a/web-development-notes.html") Web dev notes
+    li: a(href="#") 10 Rules to Life
     li: a(href="#") How I work
     li: a(href="#") Recommendations
-    li: a(href="#") One-line book reviews
     li: a(href="#") How to be a UX designer
 nav.unit.one-of-four
   ul
@@ -30,7 +29,7 @@ nav.unit.one-of-four
     li: a(href="#") obnyc
     li: a(href="#") Sponsor
 nav.unit.one-of-four
-  p not much here yet
+  p Older versions of this site
   ul
     li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
     li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
