finalized before branching for new layout

--- a/harpapp/public/index.jade
+++ b/harpapp/public/index.jade
@@ -2,13 +2,14 @@ div#thebar
   != partial("_emailcollector")
 
 h1 Hello.
-h3 The more you know, the more you know, and the more you don't know.
-p Hi, I'm Andrew! I design things.
+div.greeting
+  h3 The more you know, the more you know, and the more you don't know.
+  p Hi, I'm Andrew! I design things.
 nav.unit.one-of-four
   ul
     li: a(href="/about.html") About
     li: a(href="/weeResume/") Resume
-    li: a(href="/thoughts/") Advice & Thoughts
+    li: a(href="/articles/") Advice & Thoughts
     li: a(href="http://designtox.tumblr.com") designtox
     li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
     li: a(href="http://advicefromacollegedropout.com") Podcast
