--- a/harpapp/public/main.less
+++ b/harpapp/public/main.less
@@ -2,6 +2,8 @@
   Main content
 ----------------*/
 
+@main: #FF7B00;
+
 body{
   font-family: 'Lato', Helvetica, sans-serif;
   padding: 50px 20px 0;
@@ -12,9 +14,53 @@ body{
   margin-top: 20px;
 }
 
-.greeting {
-  
+a {
+
 }
+
+.cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #FFEBCE;
+  height: 100%;
+  width: 100%;
+  z-index: -9;
+}
+
+.headline {
+ 
+
+}
+
+.greeting {
+  position: absolute;
+  bottom: 40px;
+  left: 20px;
+}
+
+.permaNav {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+}
+.permaNav ul li {
+  display: inline;
+  margin-right: 14px;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
+
+.projects{
+  margin-top: 900px;
+}
+
+.menu {
+  margin-top: 100px;
+}
+
+
 
 .mainlink a{
   text-decoration: none;
@@ -47,7 +93,11 @@ p{
 
 nav a {
   text-decoration: none;
-  color: blue;
+  color: @main;
+
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+  font-weight: 300;
 }
 nav ul li {
   padding-bottom: 10px;
@@ -89,6 +139,7 @@ nav ul li {
 /*--------------
   The Email Bar
 ----------------*/
+@bar-color: #FF7474;
 
 #thebar {
   text-align: center;
@@ -101,53 +152,52 @@ nav ul li {
   margin: auto; 
 
   padding: 4px 0;
-  
-  background: #eee;
+
+  background: @bar-color;
 }
 #thebar form div {
   display: inline;
 }
 
 #thebar label {
+  color: white;
   margin-right: 5px;
-
-  font-weight: 300;
+  font-weight: 400;
 }
 
 #thebar input[type=text] {
-  border: 0;
-  
-  border-bottom: 1px dashed #ccc;
+  font-family: 'Lato', Helvetica, sans-serif;
+  font-size: 1.1rem;
+  color: @bar-color;
 
-  /*border: 1px solid red;
-  border-radius: 10px;*/
 
-  /*border-left: 2px solid red;
-  border-right: 2px solid red;*/
+  border: none;
+  border-radius: 5px;
 
   padding: 0 10px;
 
+  height: 30px;
   width: 210px;
 
   margin-right: 5px;
 }
 
 #thebar .submit {
-  background-color: white;
-  color: red;
+  font-family: 'Lato', Helvetica, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.04rem;
 
-  padding: 3px;
-  border: 0;
-  border-radius: 0;
-
-  border: 2px solid red;
-
-  text-transform: lowercase;
+  border: none;
+  background: #136899;
+  height: 30px;
+  width: 80px;
+  color: white;
+  border-radius: 5px;
+  transition: all 0.15s linear;
 
 }
 #thebar .submit:hover {
-  color: black;
-  border-color: black;
+  background: #1e75aa;
 }
 
 
