added fallback in css for linear-gradients, should display on iOS browsers now

--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -116,21 +116,25 @@ nav ul li {
 
 .a {
   color: #fff;
+  background: #0a1855;
   background: linear-gradient(45deg, #0a1855 0%, #da0024 100%) fixed;
 }
 
 .b {
   color: #fff;
+  background: #14272c;
   background: linear-gradient(45deg, #14272c 0%, #155af3 100%) fixed;
 }
 
 .c {
   color: #fff;
+  background: #44a226;
   background: linear-gradient(45deg, #44a226 0%, #7dca49 100%) fixed;
 }
 
 .d {
   color: #fff;
+  background: #e87975;
   background: linear-gradient(45deg, #e87975 0%, #f3c49f 100%) fixed;
 }
 
