getting back to working on it, some late night edits

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -3,8 +3,8 @@ div#thebar
 
 h1.headline Hello.
 div.greeting
-  h3 The more you know, the more you know, and the more you don't know.
-  p Hi, I'm Andrew! I design things.
+  h3 Hi, I'm Andrew! I design things.
+  p The more you know, the more you know, and the more you don't know.
 
 
 div.cover
@@ -12,11 +12,17 @@ div.cover
 nav
   ul
     li: a(href="/about.html") About
-    li: a(href="/weeResume/") Resume
     li: a(href="/articles/") Advice & Thoughts
     li: a(href="http://designtox.tumblr.com") designtox
+    li: a(href="http://advicefromacollegedropout.com") Podcast Project
 
-nav.permaNav
+    li: a(href="#") About
+    li: a(href="#") What I do
+    li: a(href="#") What I write
+    li: a(href="#") What I read
+    li: a(href="#") How I work
+
+nav.bottomBar
   ul
     li: a(href="/about.html") About
     li: a(href="/weeResume/") Resume
@@ -132,6 +138,9 @@ section.projects
       h4 My role
       p 
 
+
+
+
 section.menu
   nav.unit.one-of-four
     ul
@@ -161,3 +170,5 @@ section.menu
     ul
       li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
       li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
+
+
