--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -44,10 +44,13 @@ p{
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #FFEBCE;
+  background-color: #85D8FF;
   height: 100%;
   width: 100%;
   z-index: -9;
+}
+.covertext{
+  color: #fff;
 }
 
 .greeting {
@@ -94,6 +97,7 @@ nav a {
 }
 nav ul li {
   padding-bottom: 10px;
+  text-transform: uppercase;
 }
 
 
