small edits and added startupcities to project

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -7,10 +7,10 @@ div.covertext
   nav
     ul
       li: a(href="/about.html") About
-      li: a(href="#") What I do
-      li: a(href="/articles/") Advice & Thoughts
+      //li: a(href="#") What I do
+      //li: a(href="/articles/") Advice & Thoughts
       li: a(href="https://twitter.com/_ndrw/favorites") What I read
-      li: a(href="#") How I work
+      //li: a(href="#") How I work
     ul
       li: a(href="http://designtox.tumblr.com") designtox
       li: a(href="http://advicefromacollegedropout.com") Podcast Project
@@ -18,18 +18,20 @@ div.covertext
 
 
   div.greeting
-    h3 Hi, I'm Andrew! I design things.
-    p The more you know, the more you know, and the more you don't know.
+    h3 My name is Andrew S. Chen
+    p I design things, study people, and learn about the world.
 
   nav.bottomBar
     ul
-      li: a(href="/about.html") SwapBot
-      li: a(href="/weeResume/") tosigram
-      li: a(href="/articles/") Hejia
-      li: a(href="http://designtox.tumblr.com") designtox
+      li: a(href="/about.html") Project
+      li: a(href="/weeResume/") Project
+      li: a(href="/articles/") Project
+      li: a(href="http://designtox.tumblr.com") Project
 
 
 div.cover
+  div.separator
+
 
 
 section.projects
@@ -149,12 +151,12 @@ section.menu
       li: a(href="http://designtox.tumblr.com") designtox
       li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
       li: a(href="http://advicefromacollegedropout.com") Podcast Project
-      li: a(href="#") Shop
+      //li: a(href="#") Shop
   nav.unit.one-of-four
     ul
       li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
       //li: a(href="/a/content-consumption.html") Content consumption
-      li: a(href="#") StartupCities
+      li: a(href="/startupcities/") StartupCities
       //li: a(href="/a/web-development-notes.html") Web dev notes
       //li: a(href="#") 10 Rules to Life
       //li: a(href="#") Recommendations
