--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -2,7 +2,7 @@
   Global
 ----------------*/
 
-@main: #FF7B00;
+@main: #136899;
 @classy-dark-gray: #1A1A1A;
 
 body{
@@ -17,6 +17,9 @@ body{
 
 a {
   color: blue;
+}
+a:hover {
+  color: #1e75aa;
 }
 
 h1{
@@ -45,13 +48,13 @@ p{
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #85D8FF;
-  height: 100%;
+  background-color: #fff;
+  height: 110%;
   width: 100%;
   z-index: -9;
 }
 .covertext{
-  color: #fff;
+  color: black;
 }
 
 .greeting {
@@ -63,6 +66,18 @@ p{
   margin-top: 100px;
 }
 
+/*.separator {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  width: 100%;
+  height: 0px;
+  border-style: solid;
+  border-width: 100px 0 0 2400px;
+  border-color: #85D8FF transparent transparent transparent;
+}*/
 
 /*--------------
   Index lists and navs
@@ -87,8 +102,17 @@ p{
 .bottomBar ul li {
   display: inline;
   margin-right: 14px;
+}
+.bottomBar ul li a {
   text-transform: uppercase;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
+  padding: 4px;
+  background-color: black;
+  color: white;
+  letter-spacing: 0.07rem;
+}
+.bottomBar ul li a:hover {
+ 
 }
 
 
@@ -97,11 +121,11 @@ nav a {
   color: @main;
 
   text-transform: uppercase;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0rem;
   font-weight: 300;
 }
 nav ul li {
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   text-transform: uppercase;
 }
 
